--- a/src/styles/components/Modal.module.scss
+++ b/src/styles/components/Modal.module.scss
@@ -1,4 +1,23 @@
 .Modal {
+  top: 0;
+  bottom: 0;
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  align-items: center;
+  justify-content: center;
+  z-index: 10;
+  .ModalBackground {
+    animation-duration: 0.5s;
+    animation-name: BackgroundRender;
+    backdrop-filter: blur(10px);
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    z-index: 11;
+  }
+  .ModalContent {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -13,7 +32,26 @@
     font-size: large;
     border: 2px solid rgb(255, 255, 255);
     border-radius: 15px;
-    backdrop-filter: blur(5px);
-    z-index: 10;
+    backdrop-filter: blur(25px);
+    z-index: 12;
     position: fixed;
+  }
 }
+
+@keyframes BackgroundRender {
+    from {
+      width: 0vw;
+      height: 0vh;
+      backdrop-filter: blur(0px);
+      border-radius: 100%;
+    }
+  
+    to {
+        width: 100vw;
+        height: 100vh;
+        backdrop-filter: blur(10px);
+        border-radius: 0%;
+    }
+  }
+  
+  
