--- a/src/styles/components/Button.module.scss
+++ b/src/styles/components/Button.module.scss
@@ -1,7 +1,7 @@
 .Button {
     background-color: white;
     font-size: large;
-    padding: 0.2rem;
+    padding: 0.4rem 0.8rem;
     border-radius: 0.7rem;
 }
 .Button:hover {
