--- a/src/styles/components/Layout.module.scss
+++ b/src/styles/components/Layout.module.scss
@@ -1,19 +1,21 @@
 .Layout {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    min-height: 100%;
-    width: 100%;
-    background-color: transparent;
-    color: white;
-  }
-  
-  .LayoutChildren {
-    min-height: 85vh;
-    height: 100%;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 1200px;
+  background-color: transparent;
+  color: white;
+}
+
+.LayoutChildren {
+  min-height: 85vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
