--- a/src/styles/pages/Home.module.scss
+++ b/src/styles/pages/Home.module.scss
@@ -1,6 +1,20 @@
 .Home {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    display: grid;
+    gap: 1.5rem 1.5rem;
+    grid-template-columns: 1.5fr 2fr 1.5fr;
+    grid-template-rows: 1.5fr 2fr 1.5fr;
+    .Link {
+        text-decoration: none;
+        color: white;
+    }
+}
+
+@media (max-width: 1000px) {
+    .Home {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 1.5rem;
+    }
 }
