--- a/src/styles/components/Modal.module.scss
+++ b/src/styles/components/Modal.module.scss
@@ -35,6 +35,13 @@
     backdrop-filter: blur(25px);
     z-index: 12;
     position: fixed;
+    .ModalButtons {
+      justify-content: center;
+      align-items: center;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 1rem;
+    }
   }
 }
 
